[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hurricaneapi"
description = "Hurricaneapi framework"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Shchipko Daniil", email = "daniil49925@ya.ru" },
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/daniil49926/hurricaneapi"

[tool.hatch.version]
path = "hurricaneapi/__init__.py"

[tool.ruff]
line-length = 88
show-fixes = true
src = ["hurricaneapi"]

[tool.ruff.lint]
select = [
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["F401"]
